--- a/index.html
+++ b/index.html
@@ -1,5 +1,11 @@
 
-<!DOCTYPE html>
-<html> 
-    <head> </head>
-        <title>        </title>
+<!DOCTYPE html> <!--Dit is mijn homepage-->
+<html> <!--Dit is het html-element-->
+    <head>
+        <title>  Jordi zijn informaticawebsite      </title>  
+    <meta charset="utf-8"
+    </head>
+       <body>
+        Welkom op mijn website
+       </body>
+       </html> 
