--- a/index.html
+++ b/index.html
@@ -7,5 +7,8 @@
     </head>
        <body>
         Welkom op mijn website
-       </body>
+
+        <a href="binairstelsel.html"></a> <!--link terug naar de homepage-->
+       
+    </body>
        </html> 
