--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
        <body>
         Welkom op mijn website
 
-        <a href="binairstelsel.html"></a> <!--link terug naar de homepage-->
+        <a href="binairstelsel.html">Binair stelsel</a> <!--link terug naar de homepage-->
        
     </body>
        </html> 
