--- a/kleurmodellen.html
+++ b/kleurmodellen.html
@@ -1,4 +1,20 @@
-<h1>Uitleg Kleurmodellen</h1> <!--hoofdkopje van tekstgedeelte-->
+
+<!DOCTYPE html> <!--dit is de pagina over kleurmodellen van de site-->
+<html> <!--dit is het html-element-->
+<head>
+    <title>Kleurmodellen</title> <!--dit is de title van de pagina kleurmodellen-->
+    <link rel="stylesheet" href="opmaak.css"> <!--link naar css-->
+    <meta charset="utf-8">
+</head>
+  <body>
+    <ul> <!--unorderd list-->
+      <li><a href="index.html">Home</a> <!--link terug naar de homepage--></li>
+      <li><a href="binairstelsel.html">Binair stelsel</a> <!--link terug naar pagina over binair stelsel--></li> 
+      <li><a href="kleurmodellen.html">Kleurmodellen</a> <!--link terug naar pagina over kleurmodellen--></li>
+      <li><a href="Bitmap.html">Bitmap</a> <!--link terug naar de pagina over bitmap--></li>
+      <li><a href="3-lagenmodel.html">3-lagenmodel</a> <!--link naar de pagina over het 3-lagemodel--></li>
+    </ul> 
+    <h1>Uitleg Kleurmodellen</h1> <!--hoofdkopje van tekstgedeelte-->
 
     
     <article> <!--begin artikel-->
