--- a/index.html
+++ b/index.html
@@ -1,19 +1,33 @@
 
-<!DOCTYPE html> <!--dit is de pagina over kleurmodellen van de site-->
+<!DOCTYPE html> <!--dit is de homepage van mijn site-->
 <html> <!--dit is het html-element-->
-<head>
-    <title>Kleurmodellen</title> <!--dit is de title van de pagina kleurmodellen-->
-    <link rel="stylesheet" href="opmaak.css"> <!--link naar css-->
+  <head>
+    <title>Het eerste begin</title> <!--dit is de titel van de index-->
+    <link rel="stylesheet" href="opmaak.css"> <!--link naar css bestand-->
     <meta charset="utf-8">
-</head>
-  <body>
+  </head>
+ 
+
+  <body id="body1"> <!--achtergrondkleur body1 css-->
     <ul> <!--unorderd list-->
+ 
       <li><a href="index.html">Home</a> <!--link terug naar de homepage--></li>
-      <li><a href="binairstelsel.html">Binair stelsel</a> <!--link terug naar pagina over binair stelsel--></li> 
-      <li><a href="kleurmodellen.html">Kleurmodellen</a> <!--link terug naar pagina over kleurmodellen--></li>
+      <li><a href="binairstelsel.html">Binair stelsel</a> <!--link terug naar binair stelsel--></li> 
+      <li><a href="kleurmodellen.html">Kleurmodellen</a> <!--link terug naar kleumodellen--></li>
       <li><a href="Bitmap.html">Bitmap</a> <!--link terug naar de pagina over bitmap--></li>
       <li><a href="3-lagenmodel.html">3-lagenmodel</a> <!--link naar de pagina over het 3-lagemodel--></li>
-    </ul> 
-    
-  </body>
+    </ul>
+
+<article> <!--begin artikel-->
+  <h2>Website Jordi en Justin</h2> <!--tussenkopje-->
+  <p>Goedemorgen dames en heertjes. Welkom op deze website. Vandaag gaan wij jullie iets vertellen over het binair stelsel, kleurmodellen en bitmaps.
+      Ik vind het wel bijzonder dat jij op deze site terecht bent gekomen, want waarom zou je in je vrije tijd deze website bekijken.
+      Als je nog steeds geïnteresseerd bent veel plezier dan met het bezoeken van de website. (klik op een van de blokjes bij de inhoudsopgave om daarvan informatie te krijgen)
+  </p>
+</article>
+
+<img src="Hallo.PNG"> <!--plaatje voor index-->
+
+<img src="plaatjehomepage.PNG"> <!--plaatje voor index-->
+
 </html>
