--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
       <li><a href="binairstelsel.html">Binair stelsel</a> <!--link terug naar binair stelsel--></li> 
       <li><a href="kleurmodellen.html">Kleurmodellen</a> <!--link terug naar kleumodellen--></li>
       <li><a href="bitmap.html">Bitmap</a> <!--link terug naar de pagina over bitmap--></li>
-      <li><a href="drie-lagenmodel.html">3-lagenmodel</a> <!--link naar de pagina over het 3-lagemodel--></li>
+      <li><a href="drielagenmodel.html">3-lagenmodel</a> <!--link naar de pagina over het 3-lagemodel--></li>
     </ul>
 
 <article> <!--begin artikel-->
