--- a/binairstelsel.html
+++ b/binairstelsel.html
@@ -34,7 +34,7 @@
   <img src="BinaryBonanza.PNG" style="width:550px;height:550px"> <!--plaatje van binary bonanza-->
   </a>
 
-  <img src="Binair plaatje.jpg"> <!--plaatje over binaire code-->
+  <img src="Binair stelsel.jpg"> <!--plaatje over binaire code-->
 
   <a href="https://www.youtube.com/watch?v=TeQH_Bei8iU"> <!--link naar filpmje over binair rekenen-->
     <img src="Binairrekenen.PNG"> <!--plaatje van filmpje over binair rekenen-->
