--- a/kleurmodellen.html
+++ b/kleurmodellen.html
@@ -39,7 +39,7 @@
 
 
     <a href="https://www.youtube.com/watch?v=YtH9eXWuf3Y"> <!--link naar filpmje over RGB-kleurmodel en CMYK-model-->
-      <img src="FilmpjeKleuren.PNG"> <!--plaatje van filmpje over RGB en CMYK-->
+      <img src="FilmpjeKleuren.png"> <!--plaatje van filmpje over RGB en CMYK-->
     </a>
 
   
