--- a/bitmap.html
+++ b/bitmap.html
@@ -46,7 +46,7 @@
         <img src="Bitmap.PNG" style="width:350px;height:250px"> <!--plaatje van filmpje over binair rekenen-->
     </a> 
 
-  <img src="Bitmapafb.PNG"> <!--plaatje bitmap-->
+  <img src="Bitmapafb.png"> <!--plaatje bitmap-->
 
   </body>
 </html>
