--- a/index.html
+++ b/index.html
@@ -7,7 +7,12 @@
     <meta charset="utf-8">
   </head>
  
-
+     <div class="navbar">
+  <div class="dropdown">
+    <button class="dropbtn">Dropdown
+      <i class="fa fa-caret-down"></i>
+    </button>
+    <div class="dropdown-content">
   <body id="body1"> <!--achtergrondkleur body1 css-->
     <ul> <!--unorderd list-->
  
