--- a/index.html
+++ b/index.html
@@ -26,30 +26,21 @@
 <!DOCTYPE html>
 <html>
 <head>
-    <title>Dropdown Menu</title>
-</head>
-<body>
-    <label for="menu">Kies een optie:</label>
-    <select id="menu">
-        <option value="optie1">Optie 1</option>
-        <option value="optie2">Optie 2</option>
-        <option value="optie3">Optie 3</option>
-        <option value="optie4">Optie 4</option>
-    </select>
-
-    <p>Geselecteerde optie: <span id="geselecteerdeOptie"></span></p>
-
-    <script>
-        // JavaScript om de geselecteerde optie weer te geven
-        var dropdown = document.getElementById("menu");
-        var resultaat = document.getElementById("geselecteerdeOptie");
-
-        dropdown.addEventListener("change", function() {
-            resultaat.textContent = dropdown.value;
-        });
-    </script>
-</body>
-</html>
+     <div class="navbar">
+  <div class="dropdown">
+    <button class="dropbtn">Dropdown
+      <i class="fa fa-caret-down"></i>
+    </button>
+    <div class="dropdown-content">
+        <h3><a href="index.html">homepage</a>
+            <a href="binairstelsel.html">binairstelsel</a>
+            <a href="kleurmodellen.html">kleurmoddelen</a>
+            <a href="BKE.html">Boter,Kaas en Eiren</a>
+            <a href="afbeeldingen.html">afbeeldingen</a>
+            <a href="compressie.html">compressie</a>
+            <a href="3-lagenmodel.html">3-lagenmodel</a>
+            <a href="computerwerking.html">computerwerking</a>
+           
 
 <img src="Hallo.png"> <!--plaatje voor index-->
 
