--- a/index.html
+++ b/index.html
@@ -35,10 +35,8 @@
         <h3><a href="index.html">homepage</a>
             <a href="binairstelsel.html">binairstelsel</a>
             <a href="kleurmodellen.html">kleurmoddelen</a>
-            <a href="BKE.html">Boter,Kaas en Eiren</a>
-            <a href="afbeeldingen.html">afbeeldingen</a>
-            <a href="compressie.html">compressie</a>
-            <a href="3-lagenmodel.html">3-lagenmodel</a>
+            <a href="bitmap.html">afbeeldingen</a>
+            <a href="drielagenmodel.html">3-lagenmodel</a>
             <a href="computerwerking.html">computerwerking</a>
            
 
