--- a/index.html
+++ b/index.html
@@ -1,4 +1,3 @@
-
 <!DOCTYPE html> <!--dit is de homepage van mijn site-->
 <html> <!--dit is het html-element-->
   <head>
@@ -7,13 +6,15 @@
     <meta charset="utf-8">
   </head>
  
-    
+
+  <body id="body1"> <!--achtergrondkleur body1 css-->
+    <ul> <!--unorderd list-->
  
       <li><a href="index.html">Home</a> <!--link terug naar de homepage--></li>
       <li><a href="binairstelsel.html">Binair stelsel</a> <!--link terug naar binair stelsel--></li> 
       <li><a href="kleurmodellen.html">Kleurmodellen</a> <!--link terug naar kleumodellen--></li>
-      <li><a href="bitmap.html">Bitmap</a> <!--link terug naar de pagina over bitmap--></li>
-      <li><a href="drielagenmodel.html">3-lagenmodel</a> <!--link naar de pagina over het 3-lagemodel--></li>
+      <li><a href="Bitmap.html">Bitmap</a> <!--link terug naar de pagina over bitmap--></li>
+      <li><a href="3-lagenmodel.html">3-lagenmodel</a> <!--link naar de pagina over het 3-lagemodel--></li>
     </ul>
 
 <article> <!--begin artikel-->
@@ -23,13 +24,9 @@
       Als je nog steeds geïnteresseerd bent veel plezier dan met het bezoeken van de website. (klik op een van de blokjes bij de inhoudsopgave om daarvan informatie te krijgen)
   </p>
 </article>
-<!DOCTYPE html>
-<html>
-<head>
-   
 
-<img src="Hallo.png"> <!--plaatje voor index-->
+<img src="Hallo.PNG"> <!--plaatje voor index-->
 
-<img src="plaatjehomepage.png"> <!--plaatje voor index-->
+<img src="plaatjehomepage.PNG"> <!--plaatje voor index-->
 
 </html>
