--- a/drielagenmodel.html
+++ b/drielagenmodel.html
@@ -10,28 +10,36 @@
       <li><a href="index.html">Home</a> <!--link terug naar de homepage--></li>
       <li><a href="binairstelsel.html">Binair stelsel</a> <!--link terug naar pagina over binair stelsel--></li> 
       <li><a href="kleurmodellen.html">Kleurmodellen</a> <!--link terug naar paigina over kleumodellen--></li>
-      <li><a href="bitmap.html">Bitmap</a> <!--link terug naar de pagina over bitmap--></li>
-      <li><a href="drielagenmodel.html">3-lagenmodel</a> <!--link naar de pagina over het 3-lagemodel--></li>
+      <li><a href="Bitmap.html">Bitmap</a> <!--link terug naar de pagina over bitmap--></li>
+      <li><a href="3-lagenmodel.html">3-lagenmodel</a> <!--link naar de pagina over het 3-lagemodel--></li>
     </ul> 
 
     <h1>Uitleg 3-lagenmodel</h1> <!--hoofdkopje van tekstgedeelte-->
 
     <article> <!--begin artikel-->
-      <h2>Fysieke laag</h2> <!--tussenkopje-->
-        <h3>Processor</h3>
-      <p></p> <!--tekst bij kopje -->
-        <h3>Werkgeheugen</h3>
-      <p></p>
-        <h3>Moederbord</h3>
-      <p></p>
+      <h2>algemene informatie over 3-lagenmodel</h2>
+        <p>Het 3-lagenmodel is een conceptueel model dat vaak wordt gebruikt om de architectuur 
+          van computersystemen en netwerken te begrijpen. Dit model verdeelt de functionaliteit 
+          van een systeem in drie hoofdlagen: de fysieke laag, de logische laag en de toepassingenlaag. </p>
 
-      <h2>logische laag</h2>
-        <h3>Besturingssysteem</h3>
-      <p></p>
-        <h3>Rol van de logische laag</h3>
+      <h2>Fysieke laag</h2> <!--tussenkopje-->
+        <p>De fysieke laag vormt de basis van het 3-lagenmodel en omvat alle hardwarecomponenten van een computersysteem. Enkele van de belangrijkste begrippen in deze laag zijn:
+          Processor (CPU): De centrale verwerkingseenheid (CPU) is het brein van de computer. Het bestaat uit twee essentiële onderdelen, de Arithmetic Logic Unit (ALU) voor wiskundige bewerkingen en de Control Unit voor het beheer van instructies.
+          Werkgeheugen (RAM/ROM): RAM (Random Access Memory) is het tijdelijke geheugen van een computer waar gegevens en programma's worden opgeslagen tijdens actief gebruik. ROM (Read-Only Memory) bevat permanente instructies die nodig zijn om het systeem op te starten.
+          Bus: Een bus is een communicatiekanaal waarmee gegevens tussen verschillende hardwarecomponenten kunnen worden overgedragen.
+          Von Neumann-architectuur: Dit is een architectuurconcept waarbij zowel gegevens als instructies in hetzelfde geheugen worden opgeslagen en op dezelfde manier worden verwerkt.
+          Moederbord: Het moederbord is het hoofdcircuit van een computer waarop alle hardwarecomponenten zijn aangesloten en met elkaar communiceren.
+          System-on-a-chip: Een System-on-a-chip (SoC) is een geïntegreerde chip waarop meerdere componenten, waaronder de CPU, GPU, en geheugen, zijn gecombineerd om ruimte te besparen en de efficiëntie te verhogen.
+          Permanent geheugen/opslagmedia: Dit omvat de opslagapparaten, zoals harde schijven en SSD's, waar gegevens permanent kunnen worden opgeslagen.
+          Randapparatuur: Randapparatuur zijn externe apparaten die aan de computer worden gekoppeld, zoals toetsenborden, muizen, printers en beeldschermen.
+          Verbindingen: kabels/interfaces: De fysieke laag omvat ook de kabels en interfaces waarmee verschillende hardwarecomponenten met elkaar en met externe apparaten worden verbonden.</p>
+
+      <h2>Logische laag</h2>
+        <p>De logische laag bevindt zich boven de fysieke laag en omvat het besturingssysteem, dat essentieel is voor de coördinatie en beheer van hardwarebronnen en softwareprocessen. Andere begrippen in deze laag zijn:
+          Operating System (besturingssysteem): Het besturingssysteem is verantwoordelijk voor taken zoals het beheren van geheugen, het plannen van processen en het bieden van een gebruikersinterface.
+          Talen/compilers: Talen worden gebruikt om software te schrijven, en compilers vertalen deze programmeertalen naar machinetaal die de computer begrijpt.</p>
 
       <h2>Toepassingslaag</h2>
-        <h3>Toepassingsprogramma's</h3>
-      <p></p>
-        <h3>API's</h3>
-      <p></p>
+        <p>De toepassingenlaag is de bovenste laag van het model en omvat de softwaretoepassingen die door gebruikers worden gebruikt. Dit omvat:
+          Toepassingsprogramma's: Toepassingsprogramma's zijn softwaretoepassingen die specifieke functies bieden, zoals tekstverwerking, grafisch ontwerp, webbrowsing en meer.          
+          Databases: Databases zijn gegevensopslagsystemen die worden gebruikt voor het opslaan, beheren en ophalen van gestructureerde informatie.</p>
