--- a/index.html
+++ b/index.html
@@ -25,8 +25,8 @@
   </p>
 </article>
 
-<img src="Hallo.PNG"> <!--plaatje voor index-->
+<img src="Hallo.png"> <!--plaatje voor index-->
 
-<img src="plaatjehomepage.PNG"> <!--plaatje voor index-->
+<img src="plaatjehomepage.png"> <!--plaatje voor index-->
 
 </html>
