--- a/drielagenmodel.html
+++ b/drielagenmodel.html
@@ -44,4 +44,4 @@
           Toepassingsprogramma's: Toepassingsprogramma's zijn softwaretoepassingen die specifieke functies bieden, zoals tekstverwerking, grafisch ontwerp, webbrowsing en meer.          
           Databases: Databases zijn gegevensopslagsystemen die worden gebruikt voor het opslaan, beheren en ophalen van gestructureerde informatie.</p>
 
-       <img src="Lagenmodel_+Smartphone.jpg"
+       <img src="Lagenmodel_+Smartphone.jpg"> 
