--- a/binairstelsel.html
+++ b/binairstelsel.html
@@ -31,7 +31,7 @@
     </article> <!--eind artikel-->
 
   <a href="https://games.penjee.com/binary-bonanza/"> <!--link naar binary bonanza-->
-  <img src="BinaryBonanza.PNG" style="width:550px;height:550px"> <!--plaatje van binary bonanza-->
+  <img src="BinaryBonanza.png" style="width:550px;height:550px"> <!--plaatje van binary bonanza-->
   </a>
 
   <img src="binair stelsel.jpg"> <!--plaatje over binaire code-->
