--- a/drielagenmodel.html
+++ b/drielagenmodel.html
@@ -12,7 +12,15 @@
       <li><a href="kleurmodellen.html">Kleurmodellen</a> <!--link terug naar paigina over kleumodellen--></li>
       <li><a href="bitmap.html">Bitmap</a> <!--link terug naar de pagina over bitmap--></li>
       <li><a href="drielagenmodel.html">3-lagenmodel</a> <!--link naar de pagina over het 3-lagemodel--></li>
-    </ul> 
+     <li class="dropdown">
+          <a href="3-lagenmodel.html" class="dropbtn">3-lagenmodel</a>
+          <div class="dropdown-content">
+              <a href="#">Toepassingslaag</a>
+              <a href="#">Transportlaag</a>
+              <a href="#">Netwerklaag</a>
+          </div>
+      </li>
+    </ul>
 
     <h1>Uitleg 3-lagenmodel</h1> <!--hoofdkopje van tekstgedeelte-->
 
