Update and rename drielagenmodel.html to 3-lagenmodel.html

--- a/3-lagenmodel.html
+++ b/3-lagenmodel.html
@@ -6,13 +6,12 @@
     <meta charset="utf-8">
   </head>
   <body>
-    <ul> <!--unorderd list-->
-      <li><a href="index.html">Home</a> <!--link terug naar de homepage--></li>
-      <li><a href="binairstelsel.html">Binair stelsel</a> <!--link terug naar pagina over binair stelsel--></li> 
-      <li><a href="kleurmodellen.html">Kleurmodellen</a> <!--link terug naar paigina over kleumodellen--></li>
-      <li><a href="bitmap.html">Bitmap</a> <!--link terug naar de pagina over bitmap--></li>
-      <li><a href="drielagenmodel.html">3-lagenmodel</a> <!--link naar de pagina over het 3-lagemodel--></li>
-     <li class="dropdown">
+    <ul>
+      <li><a href="index.html">Home</a></li>
+      <li><a href="binairstelsel.html">Binair stelsel</a></li>
+      <li><a href="kleurmodellen.html">Kleurmodellen</a></li>
+      <li><a href="Bitmap.html">Bitmap</a></li>
+      <li class="dropdown">
           <a href="3-lagenmodel.html" class="dropbtn">3-lagenmodel</a>
           <div class="dropdown-content">
               <a href="#">Toepassingslaag</a>
@@ -21,11 +20,12 @@
           </div>
       </li>
     </ul>
-
+  
+  
     <h1>Uitleg 3-lagenmodel</h1> <!--hoofdkopje van tekstgedeelte-->
 
     <article> <!--begin artikel-->
-      <h2>algemene informatie over 3-lagenmodel</h2>
+      <h2>Algemene informatie over 3-lagenmodel</h2>
         <p>Het 3-lagenmodel is een conceptueel model dat vaak wordt gebruikt om de architectuur 
           van computersystemen en netwerken te begrijpen. Dit model verdeelt de functionaliteit 
           van een systeem in drie hoofdlagen: de fysieke laag, de logische laag en de toepassingenlaag. </p>
@@ -48,8 +48,24 @@
           Talen/compilers: Talen worden gebruikt om software te schrijven, en compilers vertalen deze programmeertalen naar machinetaal die de computer begrijpt.</p>
 
       <h2>Toepassingslaag</h2>
-        <p>De toepassingenlaag is de bovenste laag van het model en omvat de softwaretoepassingen die door gebruikers worden gebruikt. Dit omvat:
-          Toepassingsprogramma's: Toepassingsprogramma's zijn softwaretoepassingen die specifieke functies bieden, zoals tekstverwerking, grafisch ontwerp, webbrowsing en meer.          
-          Databases: Databases zijn gegevensopslagsystemen die worden gebruikt voor het opslaan, beheren en ophalen van gestructureerde informatie.</p>
+        <p>De toepassingslaag in het 3-lagenmodel verwijst naar het deel van een computernetwerk dat verantwoordelijk is voor de communicatie tussen verschillende programma's en apps op verschillende apparaten.
+          Hier zijn enkele belangrijke punten:
+          Doel: De toepassingslaag zorgt ervoor dat programma's op verschillende apparaten met elkaar kunnen praten. Denk aan het verzenden van e-mails, het surfen op internet, of het delen van bestanden.         
+          Voorbeelden: Dit omvat programma's die je dagelijks gebruikt, zoals webbrowsers, e-mailclients (zoals Outlook of Gmail), en apps voor bestandsoverdracht.         
+          Protocollen: Het maakt gebruik van speciale regels en protocollen om ervoor te zorgen dat de communicatie soepel verloopt. Bijvoorbeeld, HTTP voor websites, SMTP voor e-mails, en FTP voor bestandsoverdracht.         
+          Beveiliging: Het is ook verantwoordelijk voor het beveiligen van de communicatie, zoals het versleutelen van gegevens om ervoor te zorgen dat alleen de bedoelde ontvanger ze kan lezen</p>          
+    
+      <h2>Verdieping operating system</h2>
+        <p> De taken van een operating system zijn:
+          Berekeningen maken: De processor voert wiskundige en logische berekeningen uit, zoals optellen en vergelijken. Dit helpt bij het uitvoeren van taken en het maken van beslissingen.
+          Gegevens beheren: Het slaat gegevens op en haalt ze op uit het geheugen (zoals RAM), wat nodig is voor programma's om te werken.
+          Instructies volgen: Het leest en begrijpt instructies van programma's en voert ze in de juiste volgorde uit.
+          Problemen oplossen: Het kan problemen detecteren en ermee omgaan, zoals fouten of speciale verzoeken van apparaten.
+          Snel werken: Moderne processors zijn erg snel en kunnen meerdere taken tegelijkertijd uitvoeren, wat computers snel maakt.
+          Kortom, een processor is als de "hersenen" van een computer. Het voert berekeningen uit, beheert gegevens en zorgt ervoor dat programma's correct werken.</p>
+        </article>   
 
-       <img src="Lagenmodel_+Smartphone.jpg"> 
+        <img src="3lagenmodel.PNG" style="width:550px;height:550px">
+
+  </body>
+  </html>
