--- a/drielagenmodel.html
+++ b/drielagenmodel.html
@@ -12,7 +12,7 @@
       <li><a href="kleurmodellen.html">Kleurmodellen</a></li>
       <li><a href="Bitmap.html">Bitmap</a></li>
       <li class="dropdown">
-          <a href="3-lagenmodel.html" class="dropbtn">3-lagenmodel</a>
+          <a href="drielagenmodel.html" class="dropbtn">drielagenmodel</a>
           <div class="dropdown-content">
               <a href="#">Toepassingslaag</a>
               <a href="#">Transportlaag</a>
