--- a/drielagenmodel.html
+++ b/drielagenmodel.html
@@ -10,7 +10,7 @@
       <li><a href="index.html">Home</a></li>
       <li><a href="binairstelsel.html">Binair stelsel</a></li>
       <li><a href="kleurmodellen.html">Kleurmodellen</a></li>
-      <li><a href="Bitmap.html">Bitmap</a></li>
+      <li><a href="bitmap.html">Bitmap</a></li>
       <li class="dropdown">
           <a href="drielagenmodel.html" class="dropbtn">drielagenmodel</a>
           <div class="dropdown-content">
@@ -65,7 +65,7 @@
           Kortom, een processor is als de "hersenen" van een computer. Het voert berekeningen uit, beheert gegevens en zorgt ervoor dat programma's correct werken.</p>
         </article>   
 
-        <img src="3lagenmodel.PNG" style="width:550px;height:550px">
+        <img src="Lagenmodel_+Smartphone.jpg" style="width:550px;height:550px">
 
   </body>
   </html>
