--- a/drielagenmodel.html
+++ b/drielagenmodel.html
@@ -65,6 +65,10 @@
           Kortom, een processor is als de "hersenen" van een computer. Het voert berekeningen uit, beheert gegevens en zorgt ervoor dat programma's correct werken.</p>
         </article>   
 
+
+  </article>
+    <img src="schetstelefoon.PNG" style="width:350px;height:400px">
+
         <img src="Lagenmodel_+Smartphone.jpg" style="width:550px;height:550px">
 
   </body>
