--- a/drielagenmodel.html
+++ b/drielagenmodel.html
@@ -67,9 +67,11 @@
 
 
   </article>
+    <h2>Schets telefoon</h2>
     <img src="schetstelefoon.PNG" style="width:350px;height:400px">
-
-        <img src="Lagenmodel_+Smartphone.jpg" style="width:550px;height:550px">
+  </article>
+       
+    <img src="Lagenmodel_+Smartphone.jpg" style="width:550px;height:550px">
 
   </body>
   </html>
