--- a/binairstelsel.html
+++ b/binairstelsel.html
@@ -13,6 +13,7 @@
       <li><a href="kleurmodellen.html">Kleurmodellen</a> <!--link terug naar paigina over kleumodellen--></li>
       <li><a href="bitmap.html">Bitmap</a> <!--link terug naar de pagina over bitmap--></li>
       <li><a href="drielagenmodel.html">3-lagenmodel</a> <!--link naar de pagina over het 3-lagemodel--></li>
+      <li><a href="computeronderdelen.html">computeronderdelen</a> <!--link naar de pagina over computeronderdelen--></li>
     </ul> 
     
     <h1>Uitleg binaire stelsel</h1> <!--hoofdkopje van tekstgedeelte-->
