--- a/computeronderdelen.html
+++ b/computeronderdelen.html
@@ -50,6 +50,7 @@
   Verschillende moederborden bieden verschillende functies en specificaties, zoals het type processor dat ze ondersteunen, de hoeveelheid RAM die ze kunnen huisvesten en de beschikbare uitbreidingsslots.
   Kortom, het moederbord is het hart van een computer, waardoor alle componenten effectief samenwerken om taken uit te voeren en informatie te verwerken.
   <p>
+     <img src="moederbord.jpg"> 
 <body>
 <h3>System-on-a-chip</h3>
   Een System-on-a-Chip (SoC) is een geïntegreerde microchip die alle belangrijke componenten van een computer- of elektronisch systeem op één enkele chip combineert. 
