--- a/computeronderdelen.html
+++ b/computeronderdelen.html
@@ -15,7 +15,7 @@
 <li><a href="kleurmodellen.html">Uitleg kleurmodellen</a></li>
 <li><a href="drielagenmodel.html">Uitleg 3-lagenmodel</a></li>
 <li><a href="computeronderdelen.html">Uitleg Computer onderdelen</a></li> 
-<li><a href="Overig.html">overige uitleg</a></li> 
+<li><a href="computeronderdelen2.html">uitleg computeronderdelen deel 2</a></li> 
   </ul>
 
 <body>
