--- a/drielagenmodel.html
+++ b/drielagenmodel.html
@@ -31,6 +31,7 @@
           van computersystemen en netwerken te begrijpen. Dit model verdeelt de functionaliteit 
           van een systeem in drie hoofdlagen: de fysieke laag, de logische laag en de toepassingenlaag. </p>
 <h1>de drie lagen van het drie lagen model</h1>
+      <img src="overzichtdrielagenmodel.png">
       <h2>Fysieke laag</h2> <!--tussenkopje-->
         <p>De fysieke laag vormt de basis van het 3-lagenmodel en omvat alle hardwarecomponenten van een computersysteem. Enkele van de belangrijkste begrippen in deze laag zijn:
           Processor (CPU): De centrale verwerkingseenheid (CPU) is het brein van de computer. Het bestaat uit twee essentiële onderdelen, de Arithmetic Logic Unit (ALU) voor wiskundige bewerkingen en de Control Unit voor het beheer van instructies.
@@ -55,7 +56,8 @@
           Voorbeelden: Dit omvat programma's die je dagelijks gebruikt, zoals webbrowsers, e-mailclients (zoals Outlook of Gmail), en apps voor bestandsoverdracht.         
           Protocollen: Het maakt gebruik van speciale regels en protocollen om ervoor te zorgen dat de communicatie soepel verloopt. Bijvoorbeeld, HTTP voor websites, SMTP voor e-mails, en FTP voor bestandsoverdracht.         
           Beveiliging: Het is ook verantwoordelijk voor het beveiligen van de communicatie, zoals het versleutelen van gegevens om ervoor te zorgen dat alleen de bedoelde ontvanger ze kan lezen</p>          
-    
+    <h1>Operatingsystem</h1>
+      
       <h2>Verdieping operating system</h2>
         <p> De taken van een operating system zijn:
           Berekeningen maken: De processor voert wiskundige en logische berekeningen uit, zoals optellen en vergelijken. Dit helpt bij het uitvoeren van taken en het maken van beslissingen.
