--- a/drielagenmodel.html
+++ b/drielagenmodel.html
@@ -29,9 +29,9 @@
       <h2>Algemene informatie over 3-lagenmodel</h2>
         <p>Het 3-lagenmodel is een conceptueel model dat vaak wordt gebruikt om de architectuur 
           van computersystemen en netwerken te begrijpen. Dit model verdeelt de functionaliteit 
-          van een systeem in drie hoofdlagen: de fysieke laag, de logische laag en de toepassingenlaag. </p>
-<h1>de drie lagen van het drie lagen model</h1>
-      <img src="overzichtdrielagenmodel.png">
+          van een systeem in drie hoofdlagen: de fysieke laag, de logische laag en de toepassingenlaag. </p>                      
+<h1>de drie lagen van het drie lagen model</h1>                                                        <img src="overzichtdrielagenmodel.png">
+      
       <h2>Fysieke laag</h2> <!--tussenkopje-->
         <p>De fysieke laag vormt de basis van het 3-lagenmodel en omvat alle hardwarecomponenten van een computersysteem. Enkele van de belangrijkste begrippen in deze laag zijn:
           Processor (CPU): De centrale verwerkingseenheid (CPU) is het brein van de computer. Het bestaat uit twee essentiële onderdelen, de Arithmetic Logic Unit (ALU) voor wiskundige bewerkingen en de Control Unit voor het beheer van instructies.
