--- a/Toepassinglaag.html
+++ b/Toepassinglaag.html
@@ -1,1 +1,23 @@
+<!DOCTYPE html> <!--dit is de homepage van mijn site-->
+<html> <!--dit is het html-element-->
+<head>
+  <title>Toepassingslaag</title>
+  <meta charset="utf-8">
+</head>
 
+<link rel="stylesheet" type="text/css" href="opmaak.css"
+
+<body>
+
+<ul>
+<li><a href="index.html">Home</a></li>
+<li><a href="binairstelsel.html">Uitleg binair stelsel</a></li> <!-- kop gemaakt om naar de uitleg van Binairstelsel en kleurmodelle te komen-->
+<li><a href="kleurmodellen.html">Uitleg kleurmodellen</a></li>
+<li><a href="drielagenmodel.html">Uitleg 3-lagenmodel</a></li>
+<li><a href="computeronderdelen.html">Uitleg Computer onderdelen</a></li> 
+<li><a href="computeronderdelen2.html">uitleg computeronderdelen deel 2</a></li> 
+  </ul>
+
+<body>
+
+  
