--- a/index.html
+++ b/index.html
@@ -16,6 +16,7 @@
       <li><a href="bitmap.html">Bitmap</a> <!--link terug naar de pagina over bitmap--></li>
       <li><a href="drielagenmodel.html">3-lagenmodel</a> <!--link naar de pagina over het 3-lagemodel--></li>
       <li><a href="computeronderdelen.html">computeronderdelen</a> <!--link naar de pagina over computeronderdelen--></li>
+      <li><a href="computeronderdelen2.html">uitleg computeronderdelen deel 2</a></li> 
     </ul>
 
 <article> <!--begin artikel-->
