--- a/computeronderdelen.html
+++ b/computeronderdelen.html
@@ -11,11 +11,11 @@
 
 <ul>
 <li><a href="index.html">Home</a></li>
-<li><a href="binairstelsel.html">Uitleg binair stelsel</a></li> <!-- kop gemaakt om naar de uitleg van Binairstelsel en kleurmodelle te komen-->
-<li><a href="kleurmodellen.html">Uitleg kleurmodellen</a></li>
-<li><a href="drielagenmodel.html">Uitleg 3-lagenmodel</a></li>
-<li><a href="computeronderdelen.html">Uitleg Computer onderdelen</a></li> 
-<li><a href="computeronderdelen2.html">uitleg computeronderdelen deel 2</a></li> 
+<li><a href="binairstelsel.html"> binair stelsel</a></li> <!-- kop gemaakt om naar de uitleg van Binairstelsel en kleurmodelle te komen-->
+<li><a href="kleurmodellen.html"> kleurmodellen</a></li>
+<li><a href="drielagenmodel.html"> 3-lagenmodel</a></li>
+<li><a href="computeronderdelen.html"> Computer onderdelen</a></li> 
+<li><a href="computeronderdelen2.html"> computeronderdelen deel 2</a></li> 
   </ul>
 
 <body>
