--- a/Toepassinglaag.html
+++ b/Toepassinglaag.html
@@ -1,4 +1,4 @@
-<!DOCTYPE html> <!--dit is de homepage van mijn site-->
+<!DOCTYPE html> <!--dit is de pagina over de toepassingslaag-->
 <html> <!--dit is het html-element-->
 <head>
   <title>Toepassingslaag</title>
