--- a/drielagenmodel.html
+++ b/drielagenmodel.html
@@ -16,9 +16,9 @@
       <li class="dropdown">
           <a href="drielagenmodel.html" class="dropbtn">drielagenmodel</a>
           <div class="dropdown-content">
-              <a href="#">Toepassingslaag</a>
-              <a href="#">Transportlaag</a>
-              <a href="#">Netwerklaag</a>
+              <a href="#">Toepassingslaag.html</a>
+              <a href="#">logischelaag.html</a>
+              <a href="#">fysiekelaag.html</a>
           </div>
       </li>
     </ul>
