--- a/Toepassinglaag.html
+++ b/Toepassinglaag.html
@@ -1,13 +1,11 @@
-<!DOCTYPE html> <!--dit is de pagina over de toepassingslaag-->
+<!DOCTYPE html> <!--dit is de 3-lagenmodel pagina van de site-->
 <html> <!--dit is het html-element-->
-<head>
-  <title>Toepassingslaag</title>
-  <meta charset="utf-8">
-</head>
-
-<link rel="stylesheet" type="text/css" href="opmaak.css"
-
-<body>
+  <head>
+    <title>Toepassingslaag</title> <!--dit is de titel van de pagina-->
+    <link rel="stylesheet" href="opmaak.css"> <!--link naar css-->
+    <meta charset="utf-8">
+  </head>
+  <body>
 
 <ul>
 <li><a href="index.html">Home</a></li>
