--- a/drielagenmodel.html
+++ b/drielagenmodel.html
@@ -16,9 +16,10 @@
       <li class="dropdown">
           <a href="drielagenmodel.html" class="dropbtn">drielagenmodel</a>
           <div class="dropdown-content">
-              <a href="#">Toepassingslaag.html</a>
-              <a href="#">logischelaag.html</a>
-              <a href="#">fysiekelaag.html</a>
+               <a href="Fysiekelaag.html">Fysieke laag</a>
+              <a href="Logischelaag.html">Logische laag</a>
+              <a href="Toepassingslaag.html">Toepassingslaag</a>
+          </div>
           </div>
       </li>
     </ul>
