--- a/Toepassinglaag.html
+++ b/Toepassinglaag.html
@@ -7,6 +7,25 @@
   </head>
   <body>
 
+    <h2>Toepassingslaag</h2>
+    <p>Toepassingsprogramma's zijn softwaretoepassingen die taken uitvoeren voor gebruikers, zoals webbrowsers en e-mailclients. Databases zijn georganiseerde 
+        verzamelingen van gestructureerde gegevens die worden gebruikt om informatie op te slaan en te beheren. Toepassingsprogramma's kunnen gegevens ophalen, bewerken en opslaan in 
+        databases om specifieke taken uit te voeren.</p>
+
+    <h2>Werking van de Toepassingslaag</h2>
+    <p>De toepassingslaag in het 3-lagenmodel verwijst naar het deel van een computernetwerk dat verantwoordelijk is voor de communicatie tussen verschillende programma's en apps op verschillende apparaten.</p>
+    <p>Hier zijn enkele belangrijke punten:</p>
+    <p>Doel: De toepassingslaag zorgt ervoor dat programma's op verschillende apparaten met elkaar kunnen praten. Denk aan het verzenden van e-mails, het surfen op internet, of het delen van bestanden.</p>         
+    <p>Voorbeelden: Dit omvat programma's die je dagelijks gebruikt, zoals webbrowsers, e-mailclients (zoals Outlook of Gmail), en apps voor bestandsoverdracht.</p>         
+    <p>Protocollen: Het maakt gebruik van speciale regels en protocollen om ervoor te zorgen dat de communicatie soepel verloopt. Bijvoorbeeld, HTTP voor websites, SMTP voor e-mails, en FTP voor bestandsoverdracht. </p>        
+    <p>Beveiliging: Het is ook verantwoordelijk voor het beveiligen van de communicatie, zoals het versleutelen van gegevens om ervoor te zorgen dat alleen de bedoelde ontvanger ze kan lezen.</p>          
+
+      <img src="3-lagemodelPlaatje.PNG" style="width:400px;height:300px">
+      <p>3-lagenmodel van een telefoon</p>
+
+  </body>
+  </html> 
+
 <ul>
 <li><a href="index.html">Home</a></li>
 <li><a href="binairstelsel.html">Uitleg binair stelsel</a></li> <!-- kop gemaakt om naar de uitleg van Binairstelsel en kleurmodelle te komen-->
