--- a/Toepassingslaag.html
+++ b/Toepassingslaag.html
@@ -1,6 +1,15 @@
 <!DOCTYPE html> <!--dit is de 3-lagenmodel pagina van de site-->
 <html> <!--dit is het html-element-->
   <head>
+   <ul>
+<li><a href="index.html">Home</a></li>
+<li><a href="binairstelsel.html">Uitleg binair stelsel</a></li> <!-- kop gemaakt om naar de uitleg van Binairstelsel en kleurmodelle te komen-->
+<li><a href="kleurmodellen.html">Uitleg kleurmodellen</a></li>
+<li><a href="drielagenmodel.html">Uitleg 3-lagenmodel</a></li>
+<li><a href="computeronderdelen.html">Uitleg Computer onderdelen</a></li> 
+<li><a href="computeronderdelen2.html">uitleg computeronderdelen deel 2</a></li> 
+  </ul> 
+    
     <title>Toepassingslaag</title> <!--dit is de titel van de pagina-->
     <link rel="stylesheet" href="opmaak.css"> <!--link naar css-->
     <meta charset="utf-8">
