--- a/Toepassingslaag.html
+++ b/Toepassingslaag.html
@@ -17,7 +17,8 @@
   <body>
 
     <h2>Toepassingslaag</h2>
-    <p></p>
+    <p>De toepassingslaag is de bovenste laag in het OSI-model en vertegenwoordigt de interface tussen de gebruiker en het netwerk.
+      Deze laag is verantwoordelijk voor het bieden van diensten en toepassingen die gebruikers in staat stellen om met het netwerk en de onderliggende lagen te communiceren.</p>
 
     <h2>Werking van de Toepassingslaag</h2>
     <p></p>
@@ -25,14 +26,7 @@
   </body>
   </html> 
 
-<ul>
-<li><a href="index.html">Home</a></li>
-<li><a href="binairstelsel.html">Uitleg binair stelsel</a></li> <!-- kop gemaakt om naar de uitleg van Binairstelsel en kleurmodelle te komen-->
-<li><a href="kleurmodellen.html">Uitleg kleurmodellen</a></li>
-<li><a href="drielagenmodel.html">Uitleg 3-lagenmodel</a></li>
-<li><a href="computeronderdelen.html">Uitleg Computer onderdelen</a></li> 
-<li><a href="computeronderdelen2.html">uitleg computeronderdelen deel 2</a></li> 
-  </ul>
+
 
 <body>
 
