--- a/Toepassingslaag.html
+++ b/Toepassingslaag.html
@@ -20,8 +20,15 @@
     <p>De toepassingslaag is de bovenste laag in het OSI-model en vertegenwoordigt de interface tussen de gebruiker en het netwerk.
       Deze laag is verantwoordelijk voor het bieden van diensten en toepassingen die gebruikers in staat stellen om met het netwerk en de onderliggende lagen te communiceren.</p>
 
-    <h2>Werking van de Toepassingslaag</h2>
-    <p></p>
+    <h2>Belangrijkste functies toepassingslaag</h2>
+    <p>Applicatieprotocollen: 
+      1. Deze laag definieert de applicatieprotocollen die worden gebruikt om gegevensuitwisseling tussen programma's en systemen mogelijk te maken. Voorbeelden van applicatieprotocollen zijn HTTP (voor webbrowsing), SMTP (voor e-mail), FTP (voor bestandsoverdracht), enzovoort.
+
+      2. Dataformaten en codering: De toepassingslaag bepaalt de manier waarop gegevens worden geformatteerd, gecodeerd en gedecodeerd voor communicatie tussen applicaties. Dit omvat aspecten zoals tekstcodering (bijvoorbeeld UTF-8 voor Unicode), gegevenscompressie en het structureren van berichten.
+
+      3. Diensten voor eindgebruikers: De toepassingslaag biedt verschillende diensten aan eindgebruikers, zoals bestandsbeheer, e-mail, instant messaging, webbrowsing en meer. Deze diensten worden mogelijk gemaakt door specifieke applicaties die gebruikmaken van de onderliggende protocollen.
+
+      4.Netwerkcommunicatie initiëren en beëindigen: Deze laag is verantwoordelijk voor het tot stand brengen, onderhouden en beëindigen van communicatiesessies tussen applicaties op verschillende apparaten via het netwerk.</p>
 
   </body>
   </html> 
