--- a/Toepassingslaag.html
+++ b/Toepassingslaag.html
@@ -21,14 +21,14 @@
       Deze laag is verantwoordelijk voor het bieden van diensten en toepassingen die gebruikers in staat stellen om met het netwerk en de onderliggende lagen te communiceren.</p>
 
     <h2>Belangrijkste functies toepassingslaag</h2>
-    <p>Applicatieprotocollen: 
-      1. Deze laag definieert de applicatieprotocollen die worden gebruikt om gegevensuitwisseling tussen programma's en systemen mogelijk te maken. Voorbeelden van applicatieprotocollen zijn HTTP (voor webbrowsing), SMTP (voor e-mail), FTP (voor bestandsoverdracht), enzovoort.
+    
+     <p> 1. Deze laag definieert de applicatieprotocollen die worden gebruikt om gegevensuitwisseling tussen programma's en systemen mogelijk te maken. Voorbeelden van applicatieprotocollen zijn HTTP (voor webbrowsing), SMTP (voor e-mail), FTP (voor bestandsoverdracht), enzovoort.<p>
 
-      2. Dataformaten en codering: De toepassingslaag bepaalt de manier waarop gegevens worden geformatteerd, gecodeerd en gedecodeerd voor communicatie tussen applicaties. Dit omvat aspecten zoals tekstcodering (bijvoorbeeld UTF-8 voor Unicode), gegevenscompressie en het structureren van berichten.
+     <p> 2. Dataformaten en codering: De toepassingslaag bepaalt de manier waarop gegevens worden geformatteerd, gecodeerd en gedecodeerd voor communicatie tussen applicaties. Dit omvat aspecten zoals tekstcodering (bijvoorbeeld UTF-8 voor Unicode), gegevenscompressie en het structureren van berichten.</p>
 
-      3. Diensten voor eindgebruikers: De toepassingslaag biedt verschillende diensten aan eindgebruikers, zoals bestandsbeheer, e-mail, instant messaging, webbrowsing en meer. Deze diensten worden mogelijk gemaakt door specifieke applicaties die gebruikmaken van de onderliggende protocollen.
+     <p> 3. Diensten voor eindgebruikers: De toepassingslaag biedt verschillende diensten aan eindgebruikers, zoals bestandsbeheer, e-mail, instant messaging, webbrowsing en meer. Deze diensten worden mogelijk gemaakt door specifieke applicaties die gebruikmaken van de onderliggende protocollen.</p>
 
-      4.Netwerkcommunicatie initiëren en beëindigen: Deze laag is verantwoordelijk voor het tot stand brengen, onderhouden en beëindigen van communicatiesessies tussen applicaties op verschillende apparaten via het netwerk.</p>
+     <p> 4.Netwerkcommunicatie initiëren en beëindigen: Deze laag is verantwoordelijk voor het tot stand brengen, onderhouden en beëindigen van communicatiesessies tussen applicaties op verschillende apparaten via het netwerk.</p>
 
   </body>
   </html> 
