--- a/Toepassingslaag.html
+++ b/Toepassingslaag.html
@@ -30,6 +30,7 @@
 
      <p> 4.Netwerkcommunicatie initiëren en beëindigen: Deze laag is verantwoordelijk voor het tot stand brengen, onderhouden en beëindigen van communicatiesessies tussen applicaties op verschillende apparaten via het netwerk.</p>
 
+    <img src="3-lagemodelPlaatje.png"
   </body>
   </html> 
 
