--- a/fysiekelaag.html
+++ b/fysiekelaag.html
@@ -1,1 +1,7 @@
 
+
+
+
+
+In het OSI-model (Open Systems Interconnection-model) is de fysieke laag de onderste laag en wordt vaak aangeduid als "Laag 1" of "PHY" (Physical Layer). 
+De fysieke laag is verantwoordelijk voor de fysieke transmissie van gegevens over een communicatienetwerk. 
