--- a/fysiekelaag.html
+++ b/fysiekelaag.html
@@ -1,7 +1,19 @@
-
-
-
-
-
+<!DOCTYPE html> <!--dit is de fysieke laag pagina van de site-->
+<html> <!--dit is het html-element-->
+  <head>
+   <ul>
+<li><a href="index.html">Home</a></li>
+<li><a href="binairstelsel.html">Uitleg binair stelsel</a></li> <!-- kop gemaakt om naar de uitleg van Binairstelsel en kleurmodelle te komen-->
+<li><a href="kleurmodellen.html">Uitleg kleurmodellen</a></li>
+<li><a href="drielagenmodel.html">Uitleg 3-lagenmodel</a></li>
+<li><a href="computeronderdelen.html">Uitleg Computer onderdelen</a></li> 
+<li><a href="computeronderdelen2.html">uitleg computeronderdelen deel 2</a></li> 
+  </ul> 
+    
+    <title>Fysiekelaag</title> <!--dit is de titel van de pagina-->
+    <link rel="stylesheet" href="opmaak.css"> <!--link naar css-->
+    <meta charset="utf-8">
+  </head>
+  <body>
 In het OSI-model (Open Systems Interconnection-model) is de fysieke laag de onderste laag en wordt vaak aangeduid als "Laag 1" of "PHY" (Physical Layer). 
 De fysieke laag is verantwoordelijk voor de fysieke transmissie van gegevens over een communicatienetwerk. 
