--- a/fysiekelaag.html
+++ b/fysiekelaag.html
@@ -9,10 +9,10 @@
 <li><a href="computeronderdelen.html">Uitleg Computer onderdelen</a></li> 
 <li><a href="computeronderdelen2.html">uitleg computeronderdelen deel 2</a></li> 
   </ul> 
-    
-    <title>Fysiekelaag</title> <!--dit is de titel van de pagina-->
-    <link rel="stylesheet" href="opmaak.css"> <!--link naar css-->
+    link rel="stylesheet" href="opmaak.css"> <!--link naar css-->
     <meta charset="utf-8">
+    <title>Fysiekelaag</title> <!--dit is de titel van de pagina-->
+   
   </head>
   <body>
 In het OSI-model (Open Systems Interconnection-model) is de fysieke laag de onderste laag en wordt vaak aangeduid als "Laag 1" of "PHY" (Physical Layer). 
