--- a/fysiekelaag.html
+++ b/fysiekelaag.html
@@ -14,5 +14,6 @@
     <title>Fysiekelaag</title> <!--dit is de titel van de pagina-->
   </head>
   <body>
-In het OSI-model (Open Systems Interconnection-model) is de fysieke laag de onderste laag en wordt vaak aangeduid als "Laag 1" of "PHY" (Physical Layer). 
-De fysieke laag is verantwoordelijk voor de fysieke transmissie van gegevens over een communicatienetwerk. 
+    <h2> De fysiekelaag</h2>
+<p>In het OSI-model (Open Systems Interconnection-model) is de fysieke laag de onderste laag en wordt vaak aangeduid als "Laag 1" of "PHY" (Physical Layer). 
+De fysieke laag is verantwoordelijk voor de fysieke transmissie van gegevens over een communicatienetwerk. </p>
