--- a/drielagenmodel.html
+++ b/drielagenmodel.html
@@ -29,9 +29,20 @@
 
     <article> <!--begin artikel-->
       <h2>Algemene informatie over 3-lagenmodel</h2>
-        <p>Het 3-lagenmodel is een conceptueel model dat vaak wordt gebruikt om de architectuur 
-          van computersystemen en netwerken te begrijpen. Dit model verdeelt de functionaliteit 
-          van een systeem in drie hoofdlagen: de fysieke laag, de logische laag en de toepassingenlaag. </p>                      
+        <p>Dit model verdeelt de architectuur van een softwaretoepassing in drie afzonderlijke lagen, elk met zijn eigen verantwoordelijkheden en functies:<p>
+<p> Toepassingslaag: Dit is de bovenste laag van het model en staat in direct contact met de eindgebruiker. De presentatielaag is verantwoordelijk voor het weergeven van de gebruikersinterface (UI) van de applicatie en het verzamelen van invoer van de gebruiker. Het doel is om de interactie tussen de gebruiker en de applicatie mogelijk te maken. Dit kan de visuele elementen omvatten, zoals knoppen, tekstvakken, formulieren en grafische gebruikersinterfaces (GUI's).</p>
+
+Logische Laag : De logische laag bevindt zich tussen de presentatielaag en de gegevenslaag. Deze laag bevat de kernfunctionaliteit en de bedrijfslogica van de applicatie. Hier worden verwerking van gegevens, berekeningen, validaties en besluitvorming uitgevoerd. De logische laag fungeert als een tussenliggende component die de invoer van de gebruiker vanuit de presentatielaag verwerkt en vervolgens de resultaten doorstuurt naar de gegevenslaag of terug naar de presentatielaag.
+
+<p>De fysieke laag:De gegevenslaag is de onderste laag van het model en is verantwoordelijk voor het beheren van de gegevens die door de applicatie worden gebruikt. Dit omvat het ophalen, opslaan en bijwerken van gegevens in een database of andere gegevensopslagplaats. De gegevenslaag kan ook verantwoordelijk zijn voor gegevensvalidatie en beveiliging. Deze laag is vaak gekoppeld aan databasesystemen of externe gegevensbronnen.</p>
+
+<p>Het doel van het drie lagen model voor software-architectuur is om de applicatie te structureren op een manier die modulair, onderhoudbaar en schaalbaar is. Elk van de lagen heeft een duidelijke set verantwoordelijkheden, waardoor ontwikkelaars en architecten de code gemakkelijker kunnen beheren en uitbreiden. Bovendien maakt dit model het mogelijk om wijzigingen in de ene laag uit te voeren zonder de andere lagen te beïnvloeden, waardoor de flexibiliteit en aanpasbaarheid van de software wordt vergroot. Het wordt vaak toegepast in softwareontwikkeling om complexe applicaties te ontwerpen en te implementeren. </p>
+
+
+
+
+
+</p>                      
 <h1>de drie lagen van het drie lagen model</h1>                                                        <img src="overzichtdrielagenmodel.png">
       
       <h2>Fysieke laag</h2> <!--tussenkopje-->
