--- a/drielagenmodel.html
+++ b/drielagenmodel.html
@@ -44,31 +44,8 @@ Logische Laag : De logische laag bevindt zich tussen de presentatielaag en de ge
 
 </p>                      
 <h1>de drie lagen van het drie lagen model</h1>                                                        <img src="overzichtdrielagenmodel.png">
-      
-      <h2>Fysieke laag</h2> <!--tussenkopje-->
-        <p>De fysieke laag vormt de basis van het 3-lagenmodel en omvat alle hardwarecomponenten van een computersysteem. Enkele van de belangrijkste begrippen in deze laag zijn:
-          Processor (CPU): De centrale verwerkingseenheid (CPU) is het brein van de computer. Het bestaat uit twee essentiële onderdelen, de Arithmetic Logic Unit (ALU) voor wiskundige bewerkingen en de Control Unit voor het beheer van instructies.
-          Werkgeheugen (RAM/ROM): RAM (Random Access Memory) is het tijdelijke geheugen van een computer waar gegevens en programma's worden opgeslagen tijdens actief gebruik. ROM (Read-Only Memory) bevat permanente instructies die nodig zijn om het systeem op te starten.
-          Bus: Een bus is een communicatiekanaal waarmee gegevens tussen verschillende hardwarecomponenten kunnen worden overgedragen.
-          Von Neumann-architectuur: Dit is een architectuurconcept waarbij zowel gegevens als instructies in hetzelfde geheugen worden opgeslagen en op dezelfde manier worden verwerkt.
-          Moederbord: Het moederbord is het hoofdcircuit van een computer waarop alle hardwarecomponenten zijn aangesloten en met elkaar communiceren.
-          System-on-a-chip: Een System-on-a-chip (SoC) is een geïntegreerde chip waarop meerdere componenten, waaronder de CPU, GPU, en geheugen, zijn gecombineerd om ruimte te besparen en de efficiëntie te verhogen.
-          Permanent geheugen/opslagmedia: Dit omvat de opslagapparaten, zoals harde schijven en SSD's, waar gegevens permanent kunnen worden opgeslagen.
-          Randapparatuur: Randapparatuur zijn externe apparaten die aan de computer worden gekoppeld, zoals toetsenborden, muizen, printers en beeldschermen.
-          Verbindingen: kabels/interfaces: De fysieke laag omvat ook de kabels en interfaces waarmee verschillende hardwarecomponenten met elkaar en met externe apparaten worden verbonden.</p>
-
-      <h2>Logische laag</h2>
-        <p>De logische laag bevindt zich boven de fysieke laag en omvat het besturingssysteem, dat essentieel is voor de coördinatie en beheer van hardwarebronnen en softwareprocessen. Andere begrippen in deze laag zijn:
-          Operating System (besturingssysteem): Het besturingssysteem is verantwoordelijk voor taken zoals het beheren van geheugen, het plannen van processen en het bieden van een gebruikersinterface.
-          Talen/compilers: Talen worden gebruikt om software te schrijven, en compilers vertalen deze programmeertalen naar machinetaal die de computer begrijpt.</p>
-
-      <h2>Toepassingslaag</h2>
-        <p>De toepassingslaag in het 3-lagenmodel verwijst naar het deel van een computernetwerk dat verantwoordelijk is voor de communicatie tussen verschillende programma's en apps op verschillende apparaten.
-          Hier zijn enkele belangrijke punten:
-          Doel: De toepassingslaag zorgt ervoor dat programma's op verschillende apparaten met elkaar kunnen praten. Denk aan het verzenden van e-mails, het surfen op internet, of het delen van bestanden.         
-          Voorbeelden: Dit omvat programma's die je dagelijks gebruikt, zoals webbrowsers, e-mailclients (zoals Outlook of Gmail), en apps voor bestandsoverdracht.         
-          Protocollen: Het maakt gebruik van speciale regels en protocollen om ervoor te zorgen dat de communicatie soepel verloopt. Bijvoorbeeld, HTTP voor websites, SMTP voor e-mails, en FTP voor bestandsoverdracht.         
-          Beveiliging: Het is ook verantwoordelijk voor het beveiligen van de communicatie, zoals het versleutelen van gegevens om ervoor te zorgen dat alleen de bedoelde ontvanger ze kan lezen</p>          
+   <p>De toepassingslaag: De toepassingslaag ois de bovenste laag van het drie-lagenmodel en is belngrijk, omdat het verantwoordelijk is voor de gebruikers en de softwaretoepassingen.</p>   
+   
     <h1>Operatingsystem</h1>
       
       <h2>Verdieping operating system</h2>
