--- a/drielagenmodel.html
+++ b/drielagenmodel.html
@@ -44,7 +44,8 @@ Logische Laag : De logische laag bevindt zich tussen de presentatielaag en de ge
 
 </p>                      
 <h1>de drie lagen van het drie lagen model</h1>                                                        <img src="overzichtdrielagenmodel.png">
-   <p>De toepassingslaag: De toepassingslaag ois de bovenste laag van het drie-lagenmodel en is belngrijk, omdat het verantwoordelijk is voor de gebruikers en de softwaretoepassingen.</p>   
+   <p>De toepassingslaag: De toepassingslaag is de bovenste laag van het drie-lagenmodel en is belngrijk, omdat het verantwoordelijk is voor de gebruikers en de softwaretoepassingen.</p> 
+   <p>De logischelaag: De logische laag is de middelste laag en zit meestal tussen de toepassingslaag en de fysieke laag in. De logische laag is belangrijk, omdat het zorgt voor de implementatie voor de bedrijfslogica en functionaliteit van de applicatie.</p>
    
     <h1>Operatingsystem</h1>
       
