--- a/drielagenmodel.html
+++ b/drielagenmodel.html
@@ -44,9 +44,12 @@ Logische Laag : De logische laag bevindt zich tussen de presentatielaag en de ge
 
 </p>                      
 <h1>de drie lagen van het drie lagen model</h1>                                                        <img src="overzichtdrielagenmodel.png">
+   <h2>De toepassingslaag</h2>
    <p>De toepassingslaag: De toepassingslaag is de bovenste laag van het drie-lagenmodel en is belngrijk, omdat het verantwoordelijk is voor de gebruikers en de softwaretoepassingen.</p> 
+   <h2>De logischelaag</h2>
    <p>De logischelaag: De logische laag is de middelste laag en zit meestal tussen de toepassingslaag en de fysieke laag in. De logische laag is belangrijk, omdat het zorgt voor de implementatie voor de bedrijfslogica en functionaliteit van de applicatie.</p>
-   
+   <h2>De fysiekelaag</h2>
+   <p>De Fysieke laag: De fysieke laag is de onderste laag van het model. Deze laag is verantwoordelijk voor het fysieke medium en de fysieke transmissie van gegevens over een communicatienetwerk. </p>
     <h1>Operatingsystem</h1>
       
       <h2>Verdieping operating system</h2>
