--- a/fysiekelaag.html
+++ b/fysiekelaag.html
@@ -1,4 +1,4 @@
-<!DOCTYPE html> <!--dit is de fysieke laag pagina van de site-->
+<!DOCTYPE html> <!--dit is de 3-lagenmodel pagina van de site-->
 <html> <!--dit is het html-element-->
   <head>
    <ul>
@@ -9,8 +9,12 @@
 <li><a href="computeronderdelen.html">Uitleg Computer onderdelen</a></li> 
 <li><a href="computeronderdelen2.html">uitleg computeronderdelen deel 2</a></li> 
   </ul> 
-    link rel="stylesheet" href="opmaak.css"> <!--link naar css-->
+    
+    <title>Toepassingslaag</title> <!--dit is de titel van de pagina-->
+    <link rel="stylesheet" href="opmaak.css"> <!--link naar css-->
     <meta charset="utf-8">
+  </head>
+  <body>
     <title>Fysiekelaag</title> <!--dit is de titel van de pagina-->
   </head>
   <body>
